@@ -2,6 +2,7 @@ package dev.dsf.fhir.spring.config;
 
 import static org.springframework.core.Ordered.HIGHEST_PRECEDENCE;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,7 +14,6 @@ import org.springframework.core.annotation.Order;
 
 import dev.dsf.fhir.service.InitialDataMigrator;
 import dev.dsf.fhir.service.InitialDataMigratorImpl;
-import dev.dsf.fhir.service.migration.CodeSystemOrganizationTypeToRoleMigrationJob;
 import dev.dsf.fhir.service.migration.MigrationJob;
 
 @Configuration
@@ -23,15 +23,11 @@ public class InitialDataMigratorConfig
 	public DaoConfig daoConfig;
 
 	@Bean
-	public CodeSystemOrganizationTypeToRoleMigrationJob codeSystemOrganizationTypeToRoleMigrationJob()
-	{
-		return new CodeSystemOrganizationTypeToRoleMigrationJob(daoConfig.organizationAffiliationDao());
-	}
-
-	@Bean
 	public List<MigrationJob> migrationJobs()
 	{
-		return List.of(codeSystemOrganizationTypeToRoleMigrationJob());
+		// currently no migration jobs
+		// add future migration jobs here
+		return Collections.emptyList();
 	}
 
 	@Bean
